--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Whack a mole</title>
+    <title>Whack em all</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
 
-      <h1>Whack eh all!</h1>
+      <h1>Whack em all!</h1>
 
         <h2>Your score:</h2>
         <h2 id="score">0</h2>
